fixed grid-layout issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,6 @@
 @use './Styles/variables' as *;
 
 .App {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
     font-family: 'Inter', sans-serif;
     width: 100%;
 }
